--- a/README
+++ b/README
@@ -7,20 +7,22 @@ wpbf is a bruteforce tool to remotely test password strength of WordPress blogin
 
 Description:
 
-    The script will try, for a given username, to login into the WordPress dashboard through the login form using a wordlist
-    for passwords. If the given username is incorrect, it will try to find a correct one. When the script success login in,
-    the matched username and password is logged and shown on the screen.
+    The script will try, for a given username, to login into the WordPress dashboard through the
+    login form using a wordlist for passwords. If the given username is incorrect, it will try to
+    find a correct one. When the script success login in, the matched username and password is logged
+    and shown on the screen.
 
-    For faster results you can spawn various threads but BE CAREFULL not to flood/DOS the site. Default settings can be
-    changed in "config.py" and "logging.conf" files. The wordlist must have one entry per line, a small wordlist is
-    provided for testing purposes.
+    For faster results you can spawn various threads but BE CAREFULL not to flood/DOS the site. Default
+    settings can be changed in "config.py" and "logging.conf" files. The wordlist must have one entry per
+    line, a small wordlist is provided for testing purposes.
 
 
 Disclamer:
 
-    This software is provided for educational purposes and testing only: use it in your own sites or with permission of the
-    owner. I'm not responsible of what actions people decide to take using this software. I'm not not responsible if someone
-    do something against the law using this sofware. Please be good and don't do anything harmful.
+    This software is provided for educational purposes and testing only: use it in your own sites or
+    with permission of the owner. I'm not responsible of what actions people decide to take using this
+    software. I'm not not responsible if someone do something against the law using this sofware. Please
+    be good and don't do anything harmful.
 
 
 Author:
@@ -44,11 +46,11 @@ Usage:
       url                   base URL where WordPress is installed (ex: http://www.myblog.com/)
 
     optional arguments:
-      -w WORDLIST, --wordlist WORDLIST		    worldlist file (default: wordlist.txt)
-      -u USERNAME, --username USERNAME		    username (defaul: admin)
-      -s SCRIPTPATH, --scriptpath SCRIPTPATH	    relative path to the login form (default: wp-login.php)
-      -t THREADS, --threads THREADS		    how many threads the script will spawn (default: 5)
-      -p PROXY, --proxy PROXY			    http proxy (ex: http://localhost:8008/)
+      -w WORDLIST, --wordlist WORDLIST		worldlist file (default: wordlist.txt)
+      -u USERNAME, --username USERNAME		username (defaul: admin)
+      -s SCRIPTPATH, --scriptpath SCRIPTPATH	relative path to the login form (default: wp-login.php)
+      -t THREADS, --threads THREADS		how many threads the script will spawn (default: 5)
+      -p PROXY, --proxy PROXY			http proxy (ex: http://localhost:8008/)
 
 
 Examples:
