Add Proxy support to the README

--- a/README
+++ b/README
@@ -36,7 +36,9 @@ Requirements:
 Features:
     * Basic username detection
     * Threads
+    * HTTP Proxy Support
     * Advanced logging using Python's logging library and logging configuration file
+
 
 Usage:
 
